Network-policy/allow_all_ingress_traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
   - {}
---------------------------------------------------------------------------------------------------------
It allow all ingress traffic.
