Network-policy/default-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
-------------------------------------------------------------------------------------------------------
It stop all the incoming and outgoing traffic.
