Network-policy/deny_all_egress_traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: app1
spec:
  podSelector: {}
  policyTypes:
  - Egress
---------------------------------------------------------------------------------------------------------
It's deny all the egress traffic.
