Network-policy/deny_all_ingress_traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: app1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---------------------------------------------------------------------------------------------------------
It deny all the ingress traffic.
